# MrkDown

./: 404.html  index.html  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  pagina_2.md
javascripts/: mathjax.js
pagina_2/: index.html
search/: search_index.json
