[tool.poetry]
name = "mrkdown"
version = "0.1.0"
description = ""
authors = ["Andersonmathema <ander.math89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.0"
markdown = "^3.3.6"
pymdown-extensions = "^10.8.1"
mkdocs-windmill = "^1.0.5"
mkdocs-material = "^9.5.28"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
